fixed overlap of about and experience in the 390px width for iphone view port

--- a/src/Component/About.css
+++ b/src/Component/About.css
@@ -129,3 +129,9 @@ margin-right: 160px;
         padding-bottom: 60px;
     }
 }
+
+@media only screen and (max-width: 390px) {
+    #about {
+        height: 125vh !important;
+    }
+}
