--- a/src/Component/Contact.css
+++ b/src/Component/Contact.css
@@ -155,8 +155,8 @@ border-radius: 4px;
     .form h3  {
        margin-left: 40px;
     }
-
-
-
 }
 
+@media only screen and (max-width: 390px) {
+    
+}
