--- a/src/Component/Experience.css
+++ b/src/Component/Experience.css
@@ -100,3 +100,7 @@
         width: 200px !important;
     }
 }
+
+@media only screen and (max-width: 390px) {
+
+}
