--- a/src/Component/Footer.css
+++ b/src/Component/Footer.css
@@ -57,3 +57,7 @@
         height: 30vh;
     }
 }
+
+@media only screen and (max-width: 390px) {
+    
+}
