--- a/src/Component/Project.css
+++ b/src/Component/Project.css
@@ -154,7 +154,8 @@
     #projects {
         height: 170vh !important;
     }
+}
 
-  
-
+@media only screen and (max-width: 390px) {
+    
 }
